Enhance ListProperties View with Property Details Link

--- a/Views/PropertyListing/ListProperties.cshtml
+++ b/Views/PropertyListing/ListProperties.cshtml
@@ -14,6 +14,7 @@
                         <p class="card-text"><strong>Location:</strong> @property.Location</p>
                         <p class="card-text"><strong>Bedrooms:</strong> @property.NumberOfBedrooms</p>
                         <p class="card-text"><strong>Cost per Night:</strong> $@property.CostPerNight</p>
+                        <a href="@Url.Action("ViewPropertyDetails", "PropertyListing", new { id = property.Id })">View Details</a>
                     </div>
                 </div>
             </div>
