Style Integration and Refactor ListProperties View

--- a/Views/PropertyListing/ListProperties.cshtml
+++ b/Views/PropertyListing/ListProperties.cshtml
@@ -1,23 +1,10 @@
 ﻿@model IEnumerable<PropertyDetailsModel>
 
-<h2>List of Properties</h2>
+<div class="container mt-4">
+    <h2>List of Properties</h2>
 
-<div class="container">
-    <div class="row">
-        @foreach (var property in Model)
-        {
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">@property.Name</h5>
-                        <p class="card-text">@property.Blurb</p>
-                        <p class="card-text"><strong>Location:</strong> @property.Location</p>
-                        <p class="card-text"><strong>Bedrooms:</strong> @property.NumberOfBedrooms</p>
-                        <p class="card-text"><strong>Cost per Night:</strong> $@property.CostPerNight</p>
-                        <a href="@Url.Action("ViewPropertyDetails", "PropertyListing", new { id = property.Id })">View Details</a>
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
+    @foreach (var property in Model)
+    {
+        @Html.Partial("_PropertyCard", property)
+    }
 </div>
