--- a/Views/Shared/Components/SearchProperties/Default.cshtml
+++ b/Views/Shared/Components/SearchProperties/Default.cshtml
@@ -1,11 +1,11 @@
 ﻿<div>
     <h3>Property Search</h3>
     <form asp-controller="PropertyListing" asp-action="ListAvailable" method="get">
-        <div class="form-group">
+        <div class="form-row">
             <label for="startDate">Start Date:</label>
             <input type="date" id="startDate" name="start" class="form-control" />
         </div>
-        <div class="form-group">
+        <div class="form-row">
             <label for="endDate">End Date:</label>
             <input type="date" id="endDate" name="end" class="form-control" />
         </div>
