--- a/Views/PropertyListing/ListProperties.cshtml
+++ b/Views/PropertyListing/ListProperties.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<PropertyDetailsModel>
 
 <div class="container mt-4">
+    @await Component.InvokeAsync("SearchProperties")
     <h2>List of Properties</h2>
 
     @foreach (var property in Model)
