Change Search Datepicker

--- a/HolidayProject/Views/PropertyListing/PropertyDetails.cshtml
+++ b/HolidayProject/Views/PropertyListing/PropertyDetails.cshtml
@@ -10,7 +10,7 @@
     <p><strong>Amenities:</strong> @string.Join(", ", Model.Amenities)</p>
     <div class="form-group">
         <p><strong>Booked Dates:</strong></p>
-        <div id="bookedDates" style="cursor: pointer;"></div>
+        <input class="datetimepicker-input" id="bookedDates" style="cursor: pointer;"></input>
     </div>
 </div>
 
