--- a/HolidayProject/Views/Shared/Components/SearchProperties/Default.cshtml
+++ b/HolidayProject/Views/Shared/Components/SearchProperties/Default.cshtml
@@ -1,14 +1,28 @@
 ﻿<div>
     <h3>Property Search</h3>
-    <form asp-controller="PropertyListing" asp-action="ListAvailable" method="get">
-        <div class="form-row">
-            <label for="startDate">Start Date:</label>
-            <input type="date" id="startDate" name="start" class="form-control" />
+    <form asp-controller="PropertyListing" asp-action="ListAvailable" method="get" class="col-8 row">
+        <label class="col-2 col-form-label">From - to:</label>
+        <div class="col-2 align-self-center">
+            <input class="datetimepicker-input form-control" name="StartDate" id="startdate" />
         </div>
-        <div class="form-row">
-            <label for="endDate">End Date:</label>
-            <input type="date" id="endDate" name="end" class="form-control" />
+        <div class="col-1 d-flex justify-content-center align-items-center"> - </div>
+        <div class="col-2 align-self-center">
+            <input class="datetimepicker-input form-control" name="EndDate" id="enddate" />
         </div>
-        <button type="submit" class="btn btn-primary">Search</button>
     </form>
+    <button type="submit" class="btn btn-primary">Search</button>
 </div>
+
+<head>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $("#startdate").datepicker();
+        });
+
+        $(function () {
+            $("#enddate").datepicker();
+        });
+    </script>
+</head>
