Inject IPropertyRepository into controllers

--- a/HolidayProject/Views/PropertyListing/ListProperties.cshtml
+++ b/HolidayProject/Views/PropertyListing/ListProperties.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PropertyDetailsModel>
+﻿@model IEnumerable<Domain.Entities.Property>
 
 <div class="container mt-4">
     @await Component.InvokeAsync("SearchProperties")
