--- a/HolidayProject/Views/PropertyListing/_PropertyCard.cshtml
+++ b/HolidayProject/Views/PropertyListing/_PropertyCard.cshtml
@@ -7,6 +7,6 @@
         <p><strong>Location:</strong> @Model.Location</p>
         <p><strong>Bedrooms:</strong> @Model.NumberOfBedrooms</p>
         <p><strong>Cost per Night:</strong> $@Model.CostPerNight</p>
-        <a href="@Url.Action("ViewPropertyDetails", "PropertyListing", new { id = Model.Id })" class="btn btn-primary">View Details</a>
+        <a href="@Url.Action("ViewPropertyDetails", "PropertyListing", new { id = Model.PropertyId })" class="btn btn-primary">View Details</a>
     </div>
 </div>
