--- a/HolidayProject/Views/Shared/Components/SearchProperties/Default.cshtml
+++ b/HolidayProject/Views/Shared/Components/SearchProperties/Default.cshtml
@@ -9,8 +9,8 @@
         <div class="col-2 align-self-center">
             <input class="datetimepicker-input form-control" name="EndDate" id="enddate" />
         </div>
+        <button type="submit" class="btn btn-primary col-1">Search</button>
     </form>
-    <button type="submit" class="btn btn-primary">Search</button>
 </div>
 
 <head>
