--- a/HolidayProject/Views/PropertyListing/_PropertyCard.cshtml
+++ b/HolidayProject/Views/PropertyListing/_PropertyCard.cshtml
@@ -1,8 +1,9 @@
 ﻿@model Domain.Entities.Property
 
-<div class="card mb-3">
+<div class="card mb-3 col-12">
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
+        <img src="https://i.imgur.com/250X2v6.jpeg" class="card-img-top" alt="...">
         <p class="card-text">@Model.Blurb</p>
         <p><strong>Location:</strong> @Model.Location</p>
         <p><strong>Bedrooms:</strong> @Model.NumberOfBedrooms</p>
