--- a/HolidayProject/Views/Shared/Components/SearchProperties/Default.cshtml
+++ b/HolidayProject/Views/Shared/Components/SearchProperties/Default.cshtml
@@ -1,13 +1,12 @@
 ﻿<div>
-    <h3>Property Search</h3>
+    <h3>Search property</h3>
     <form asp-controller="PropertyListing" asp-action="ListAvailable" method="get" class="col-8 row">
-        <label class="col-2 col-form-label">From - to:</label>
         <div class="col-2 align-self-center">
-            <input class="datetimepicker-input form-control" name="StartDate" id="startdate" />
+            <input class="datetimepicker-input form-control" name="StartDate" id="startdate" placeholder="Start Date" />
         </div>
         <div class="col-1 d-flex justify-content-center align-items-center"> - </div>
         <div class="col-2 align-self-center">
-            <input class="datetimepicker-input form-control" name="EndDate" id="enddate" />
+            <input class="datetimepicker-input form-control" name="EndDate" id="enddate" placeholder="End Date" />
         </div>
         <button type="submit" class="btn btn-primary col-1">Search</button>
     </form>
