--- a/HolidayProject/Views/Booking/CreateBooking.cshtml
+++ b/HolidayProject/Views/Booking/CreateBooking.cshtml
@@ -1,20 +1,20 @@
 ﻿@model Domain.Entities.Booking
 
-<h2>Create Booking</h2>
+<h2 class="mb-4">Create Booking</h2>
 
-<form method="post" action="/Booking/SubmitBooking">
-    <div>
-        <label for="UserEmail">Email:</label>
-        <input type="email" id="UserEmail" name="UserEmail" required />
+<form method="post" action="/Booking/SubmitBooking" class="col-6">
+    <div class="form-group mb-3">
+        <label for="UserEmail" class="control-label">Email:</label>
+        <input type="email" class="form-control" id="UserEmail" name="UserEmail" required />
     </div>
-    <div>
-        <label for="BillingAddress">Billing Address:</label>
-        <input type="text" id="BillingAddress" name="BillingAddress" required />
+    <div class="form-group mb-3">
+        <label for="BillingAddress" class="control-label">Billing Address:</label>
+        <input type="text" class="form-control" id="BillingAddress" name="BillingAddress" required />
     </div>
 
     <input type="hidden" name="PropertyId" value="@Model.PropertyId" />
     <input type="hidden" name="StartDate" value="@Model.StartDate" />
     <input type="hidden" name="EndDate" value="@Model.EndDate" />
 
-    <button type="submit">Submit Booking</button>
+    <button type="submit" class="btn btn-primary">Submit Booking</button>
 </form>
