--- a/HolidayProject/Views/Booking/BookingSuccess.cshtml
+++ b/HolidayProject/Views/Booking/BookingSuccess.cshtml
@@ -3,3 +3,5 @@
 <h2>Booking Successful</h2>
 <p>Your booking ID is: @Model.BookingId</p>
 <p>Email: @Model.UserEmail</p>
+
+<a href="@Url.Action("ListAll", "PropertyListing")" class="btn btn-primary">Go to List All</a>
