Add randomized images to PropertyListingModel and update views Add mapping to ListAll from Property to PropertyListingModel

--- a/HolidayProject/Views/PropertyListing/ListProperties.cshtml
+++ b/HolidayProject/Views/PropertyListing/ListProperties.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Domain.Entities.Property>
+﻿@model IEnumerable<PropertyListingModel>
 
 <div class="container col-12">
     @await Component.InvokeAsync("SearchProperties")
