--- a/HolidayProject/Views/PropertyListing/_PropertyCard.cshtml
+++ b/HolidayProject/Views/PropertyListing/_PropertyCard.cshtml
@@ -1,13 +1,36 @@
-﻿@model Domain.Entities.Property
+﻿@model PropertyListingModel
 
 <div class="card mb-3 col-12">
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
-        <img src="https://i.imgur.com/250X2v6.jpeg" class="card-img-top" alt="...">
+        <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
+            <div class="carousel-inner">
+                @for (int i = 0; i < Model.Images.Count(); i++)
+                {
+                    if (i == 0)
+                    {
+                        <div class="carousel-item active">
+
+                            <img src="@Model.Images.ElementAt(i)" alt="Property Image" class="d-block w-100" />
+
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="carousel-item">
+
+                            <img src="@Model.Images.ElementAt(i)" alt="Property Image" class="d-block w-100" />
+
+                        </div>
+                    }
+                }
+            </div>
+        </div>
+
         <p class="card-text">@Model.Blurb</p>
         <p><strong>Location:</strong> @Model.Location</p>
         <p><strong>Bedrooms:</strong> @Model.NumberOfBedrooms</p>
         <p><strong>Cost per Night:</strong> $@Model.CostPerNight</p>
-        <a href="@Url.Action("ViewPropertyDetails", "PropertyListing", new { id = Model.PropertyId })" class="btn btn-primary">View Details</a>
+        <a href="@Url.Action("ViewPropertyDetails", "PropertyListing", new { id = Model.Id })" class="btn btn-primary">View Details</a>
     </div>
 </div>
