--- a/HolidayProject/Views/PropertyListing/_PropertyCard.cshtml
+++ b/HolidayProject/Views/PropertyListing/_PropertyCard.cshtml
@@ -3,7 +3,7 @@
 <div class="card mb-3 col-12">
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
-        <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
+        <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel" data-bs-interval="1000">
             <div class="carousel-inner">
               @*   @for (int i = 0; i < Model.Images.Count(); i++) *@
                 @for (int i = 0; i < 3; i++)
